--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.22.1"
+lazy_static = "1.5.0"
 regex = "1.10.4"
-reqwest = "0.12.12"
+reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli"] }
 rquickjs = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.135"
@@ -18,3 +19,8 @@ urlencoding = "2.1.3"
 [[example]]
 name = "node_manip_example"
 path = "examples/node_manip_example.rs"
+
+[[example]]
+name = "proxy_model_example"
+path = "examples/proxy_model_example.rs"
+
