--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ url = "2.5.4"
 urlencoding = "2.1.3"
 linked-hash-map = "0.5.6"
 uuid = "1.6"
+actix-web = "4.10.2"
+once_cell = "1.21.1"
 
 [[example]]
 name = "node_manip_example"
