--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli
 rquickjs = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.135"
-serde_yaml = "0.9.33"
+serde_yml = "0.0.12"
 toml = "0.8.14"
 tokio = { version = "1.43.0", features = ["full"] }
 url = "2.5.4"
