Enhance project structure and update settings management
- Added features section in `Cargo.toml` for better configuration management.
- Reorganized `lib.rs` to re-export `SubconverterTarget` for improved accessibility.
- Updated `main.rs` to utilize the new settings initialization method, enhancing error handling during configuration loading.
- Refactored `remark.rs` to expose `process_filters` function for external use.
- Cleaned up proxy conversion functions across various formats, ensuring consistent variable naming and improved readability.
- Removed unused `yaml.rs` module to streamline the codebase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "subconverter-rs"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+js_runtime = []
+
+[[example]]
+name = "subconverter"
+path = "examples/subconverter/main.rs"
+
 [dependencies]
 base64 = "0.22.1"
 configparser = "3.1.0"
