--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,7 @@ uuid = "1.6"
 actix-web = "4.10.2"
 once_cell = "1.21.1"
 env_logger = "0.10.2"
+serde_ini = "0.2.0"
+
+[dev-dependencies]
+tempfile = "3.10.1"
