--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,8 @@ lazy_static = "1.5.0"
 log = "0.4.21"
 regex = "1.10.4"
 reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli"] }
-rquickjs = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.135"
-serde_yml = "0.0.12"
 toml = "0.8.14"
 tokio = { version = "1.43.0", features = ["full"] }
 url = "2.5.4"
@@ -32,6 +30,7 @@ actix-web = "4.10.2"
 once_cell = "1.21.1"
 env_logger = "0.10.2"
 serde_ini = "0.2.0"
+serde_yaml = "0.9.34"
 
 [dev-dependencies]
 tempfile = "3.10.1"
