Update Cargo.toml to include project description and license
- Added a description for the project to clarify its purpose as a utility for converting between proxy subscription formats.
- Specified the license as GPL-3.0+ to ensure proper licensing information is included.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "subconverter"
 version = "0.1.0"
 edition = "2021"
+description = "A more powerful utility to convert between proxy subscription format"
+license = "GPL-3.0+"
 
 [features]
 default = []
