--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,6 @@ serde_yaml = "0.9.34"
 
 [dev-dependencies]
 tempfile = "3.10.1"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = ["winreg", "winerror", "minwindef"] }
