--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0+"
 
 [features]
 default = []
-js_runtime = []
+js_runtime = ["quickjs"]
 
 [[example]]
 name = "subconverter-example1"
@@ -33,6 +33,7 @@ once_cell = "1.21.1"
 env_logger = "0.10.2"
 serde_ini = "0.2.0"
 serde_yaml = "0.9.34"
+quickjs = { version = "0.1.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3.10.1"
