--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ serde_ini = "0.2.0"
 serde_yaml = "0.9.34"
 quickjs = { version = "0.1.0", optional = true }
 md-5 = "0.10.6"
+clap = { version = "4.5.35", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.10.1"
