--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ once_cell = "1.21.1"
 env_logger = "0.10.2"
 serde_ini = "0.2.0"
 serde_yaml = "0.9.34"
+http = "0.2.12"
 quickjs = { version = "0.1.0", optional = true }
 md-5 = "0.10.6"
 clap = { version = "4.5.35", features = ["derive"] }
