Refactor GitHub Actions workflow for cross-compilation
- Updated the release workflow to streamline the build process for multiple target architectures.
- Removed unnecessary Docker setup steps and replaced them with direct installation of dependencies.
- Introduced the `cross` tool for building Rust projects across different platforms, enhancing the build process.
- Improved artifact preparation by ensuring the correct binaries are built and prepared for release.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,22 +19,18 @@ jobs:
           - arch: x86
             artifact: subconverter-linux-x86
             os: ubuntu-latest
-            docker_arch: x86
             target: i686-unknown-linux-gnu
           - arch: amd64
             artifact: subconverter-linux-amd64
             os: ubuntu-latest
-            docker_arch: amd64
             target: x86_64-unknown-linux-gnu
           - arch: armv7
             artifact: subconverter-linux-armv7
             os: ubuntu-latest
-            docker_arch: armhf
             target: armv7-unknown-linux-gnueabihf
           - arch: aarch64
             artifact: subconverter-linux-aarch64
             os: ubuntu-latest
-            docker_arch: aarch64
             target: aarch64-unknown-linux-gnu
     runs-on: ${{ matrix.os }}
     name: Linux ${{ matrix.arch }} Build
@@ -48,23 +44,22 @@ jobs:
         SHA=$(git rev-parse --short HEAD)
         VERSION=$(grep '^version' Cargo.toml | sed 's/.*"\(.*\)".*/\1/')
         sed -i "s/version = \"$VERSION\"/version = \"$VERSION-$SHA\"/" Cargo.toml
-        
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-      
-    - name: Build in Docker
+    
+    - name: Setup Rust
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: ${{ matrix.target }}
+    
+    - name: Install dependencies
       run: |
-        docker run --rm -v ${{ github.workspace }}:/workdir \
-          rust:slim /bin/bash -c "
-            cd /workdir && \
-            apt-get update && \
-            apt-get install -y pkg-config libssl-dev gcc-multilib g++-multilib \
-            $([[ '${{ matrix.arch }}' == 'armv7' ]] && echo 'gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libc6-dev-armhf-cross' || echo '') \
-            $([[ '${{ matrix.arch }}' == 'aarch64' ]] && echo 'gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc6-dev-arm64-cross' || echo '') \
-            $([[ '${{ matrix.arch }}' == 'x86' ]] && echo 'gcc-i686-linux-gnu g++-i686-linux-gnu libc6-dev-i386-cross' || echo '') && \
-            rustup target add ${{ matrix.target }} && \
-            cargo build --release --target ${{ matrix.target }}
-          "
+        sudo apt-get update
+        sudo apt-get install -y pkg-config libssl-dev
+    
+    - name: Install cross
+      run: cargo install cross
+      
+    - name: Build with cross
+      run: cross build --release --target ${{ matrix.target }}
         
     - name: Prepare artifact
       run: |
