Update dependencies in Cargo files and enhance GitHub Actions workflow
- Removed obsolete dependencies from `Cargo.lock` including `atomic-waker`, `core-foundation`, `native-tls`, and `hyper-tls`.
- Added new dependencies such as `cfg_aliases`, `quinn`, `quinn-proto`, `quinn-udp`, `web-time`, and `webpki-roots` to improve functionality.
- Updated `reqwest` to use `rustls-tls` and added `vendored-openssl` feature in `Cargo.toml`.
- Modified the GitHub Actions workflow to include static linking for better compatibility across platforms.
- Cleaned up the `Cargo.lock` to ensure consistency and streamline the project.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,8 @@ jobs:
       
     - name: Build with cross
       run: cross build --release --target ${{ matrix.target }}
+      env:
+        RUSTFLAGS: "-C target-feature=+crt-static"
         
     - name: Prepare artifact
       run: |
