--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0+"
 [features]
 default = []
 js_runtime = ["quickjs"]
+vendored-openssl = ["openssl/vendored"]
 
 [[example]]
 name = "subconverter-example1"
@@ -19,7 +20,7 @@ configparser = "3.1.0"
 lazy_static = "1.5.0"
 log = "0.4.21"
 regex = "1.10.4"
-reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli"] }
+reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli", "rustls-tls"], default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.135"
 toml = "0.8.14"
@@ -36,6 +37,7 @@ serde_yaml = "0.9.34"
 quickjs = { version = "0.1.0", optional = true }
 md-5 = "0.10.6"
 clap = { version = "4.5.35", features = ["derive"] }
+openssl = { version = "0.10", optional = true }
 
 [dev-dependencies]
 tempfile = "3.10.1"
