--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.135"
 toml = "0.8.14"
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 url = "2.5.4"
 urlencoding = "2.1.3"
 linked-hash-map = "0.5.6"
@@ -38,6 +38,7 @@ quickjs = { version = "0.1.0", optional = true }
 md-5 = "0.10.6"
 clap = { version = "4.5.35", features = ["derive"] }
 openssl = { version = "0.10", optional = true }
+minijinja = "2.9.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
