Add bitflags dependency and refactor proxy handling in formats
- Introduced `bitflags` version 2.9.0 in `Cargo.toml` and `Cargo.lock` to manage proxy types more effectively.
- Refactored proxy handling in `single.rs` to utilize bitflags for better clarity and type safety.
- Updated the `subconverter` function to incorporate template arguments for enhanced configuration flexibility.
- Improved INI handling methods in `ini_reader.rs` to streamline section management and item retrieval.
- Enhanced the `ruleset_to_surge` function to utilize the new `erase_section` method for better section management.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ md-5 = "0.10.6"
 clap = { version = "4.5.35", features = ["derive"] }
 openssl = { version = "0.10", optional = true }
 minijinja = "2.9.0"
+bitflags = "2.9.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
