--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,23 @@ edition = "2021"
 description = "A more powerful utility to convert between proxy subscription format"
 license = "GPL-3.0+"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [features]
 default = []
 js_runtime = ["quickjs"]
 vendored-openssl = ["openssl/vendored"]
+web-api = ["actix-web"]
+
 
 [[example]]
 name = "subconverter-example1"
 path = "examples/subconverter/main.rs"
+
+[[bin]]
+name = "subconverter"
+required-features = ["web-api"]
 
 [dependencies]
 base64 = "0.22.1"
@@ -20,16 +29,14 @@ configparser = "3.1.0"
 lazy_static = "1.5.0"
 log = "0.4.21"
 regex = "1.10.4"
-reqwest = { version = "0.12.12", features = ["json", "blocking", "gzip", "brotli", "rustls-tls"], default-features = false }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.135"
 toml = "0.8.14"
-tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 url = "2.5.4"
 urlencoding = "2.1.3"
 linked-hash-map = "0.5.6"
 uuid = "1.6"
-actix-web = "4.10.2"
+actix-web = { version = "4.10.2", optional = true }
 once_cell = "1.21.1"
 env_logger = "0.11.8"
 serde_ini = "0.2.0"
@@ -40,9 +47,36 @@ clap = { version = "4.5.35", features = ["derive"] }
 openssl = { version = "0.10", optional = true }
 minijinja = "2.9.0"
 bitflags = "2.9.0"
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+tokio = { version = "1.43.0", features = ["rt"] }
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+web-sys = { version = "0.3", features = [
+    "Headers",
+    "Request",
+    "RequestInit",
+    "RequestMode",
+    "Response",
+    "Window",
+    "console",
+    "Storage",
+] }
+wasm-bindgen-futures = "0.4"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+tokio = { version = "1.43.0", features = ["rt", "fs"] }
+reqwest = { version = "0.12.12", features = [
+    "json",
+    "blocking",
+    "gzip",
+    "brotli",
+    "rustls-tls",
+], default-features = false }
+
 
 [dev-dependencies]
 tempfile = "3.10.1"
+actix-web = "4.10.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3.9", features = ["winreg", "winerror", "minwindef"] }
