feat: make wasm run in  the browser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "cmake.ignoreCMakeListsMissing": true,
-    "cursor.general.disableHttp2": false
+    "cursor.general.disableHttp2": false,
 }
