--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,8 +47,9 @@ clap = { version = "4.5.35", features = ["derive"] }
 openssl = { version = "0.10", optional = true }
 minijinja = "2.9.0"
 bitflags = "2.9.0"
+futures = "0.3.31"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-tokio = { version = "1.43.0", features = ["rt"] }
+tokio = { version = "1.43.0", features = ["rt", "sync", "io-util"] }
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 web-sys = { version = "0.3", features = [
@@ -62,9 +63,10 @@ web-sys = { version = "0.3", features = [
     "Storage",
 ] }
 wasm-bindgen-futures = "0.4"
+console_log = "1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-tokio = { version = "1.43.0", features = ["rt", "fs"] }
+tokio = { version = "1.43.0", features = ["rt", "fs", "sync", "io-util"] }
 reqwest = { version = "0.12.12", features = [
     "json",
     "blocking",
