--- a/.cursorignore
+++ b/.cursorignore
@@ -1,2 +1,4 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
-/subconverter/base
+subconverter/base
+base
+base/**
