--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,23 @@ openssl = { version = "0.10", optional = true }
 minijinja = "2.9.0"
 bitflags = "2.9.0"
 futures = "0.3.31"
+reqwest = { version = "0.12.12", features = [
+    "json",
+    "blocking",
+    "gzip",
+    "brotli",
+    "rustls-tls",
+], default-features = false }
+thiserror = "2.0.12"
+serde_bytes = "0.11.17"
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+serde-wasm-bindgen = "0.6.5"
+wasm-bindgen-futures = "0.4"
+anyhow = "1.0.97"
+case_insensitive_string = "0.2.9"
+
+# Re-add WASM-specific dependencies
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { version = "1.43.0", features = ["rt", "sync", "io-util"] }
 wasm-bindgen = "0.2"
@@ -67,13 +84,6 @@ console_log = "1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1.43.0", features = ["rt", "fs", "sync", "io-util"] }
-reqwest = { version = "0.12.12", features = [
-    "json",
-    "blocking",
-    "gzip",
-    "brotli",
-    "rustls-tls",
-], default-features = false }
 
 
 [dev-dependencies]
