Update dependencies and enhance GitHub directory loading functionality
- Added `console_error_panic_hook` dependency for improved error handling in WASM.
- Implemented `admin_load_github_directory` function to load files from a GitHub repository directory, including error handling and logging.
- Introduced `LoadDirectoryResult` interface in the API client for structured response handling.
- Enhanced the frontend to support loading GitHub directories with user input and display results.
- Updated `next.config.js` for better WASM file handling in various environments.
- Refactored existing code for improved maintainability and clarity.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ serde-wasm-bindgen = "0.6.5"
 wasm-bindgen-futures = "0.4"
 anyhow = "1.0.97"
 case_insensitive_string = "0.2.9"
+console_error_panic_hook = "0.1.7"
 
 # Re-add WASM-specific dependencies
 [target.'cfg(target_arch = "wasm32")'.dependencies]
