Enhance cursor rules and improve file handling in VFS
- Added new cursor rules for code quality and maintainability, including file and function size limits.
- Updated the `.cargo/config.toml` to ensure consistent settings for WASM builds.
- Enhanced VSCode settings to specify the Rust target for better development experience.
- Refactored JavaScript file handling to eliminate base64 encoding for file content, simplifying the API interactions.
- Improved GitHub directory loading functionality in the frontend, allowing for better user experience and error handling.
- Updated the VFS module to include new directory operations and metadata handling, ensuring robust file management.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cmake.ignoreCMakeListsMissing": true,
     "cursor.general.disableHttp2": false,
+    "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
 }
