--- a/.github/workflows/publish-wasm.yml
+++ b/.github/workflows/publish-wasm.yml
@@ -2,6 +2,16 @@ name: Build and Publish subconverter-wasm
 
 on:
   workflow_dispatch:  # 允许手动触发
+    inputs:
+      version_increment:
+        description: '版本更新类型 (patch|minor|major)'
+        required: false
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
   release:
     types: [created]  # 当创建新的release时触发
   push:
@@ -43,60 +53,104 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
       
       - name: Build WASM package
-        run: wasm-pack build --target web --out-dir pkg
+        run: ./build-wasm.sh
+      
+      - name: Setup version management
+        run: npm install -g semver
+
+      - name: Determine version
+        id: version
+        run: |
+          cd pkg
+          
+          # 尝试获取当前版本
+          CURRENT_VERSION=$(node -p "try { require('./package.json').version } catch { '0.1.0' }")
+          echo "Current version: $CURRENT_VERSION"
+          
+          # 获取已发布的最新版本（如果有）
+          LATEST_VERSION=$(npm view subconverter-wasm version 2>/dev/null || echo "0.0.0")
+          echo "Latest published version: $LATEST_VERSION"
+          
+          # 比较当前版本和已发布版本，取更大的那个作为基础
+          BASE_VERSION=$(node -e "console.log(require('semver').gt('$CURRENT_VERSION', '$LATEST_VERSION') ? '$CURRENT_VERSION' : '$LATEST_VERSION')")
+          echo "Base version for incrementing: $BASE_VERSION"
+          
+          # 根据触发类型确定版本号
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            # 从release标签提取版本（如果存在并符合语义化版本格式）
+            RELEASE_TAG="${{ github.event.release.tag_name }}"
+            if [[ "$RELEASE_TAG" =~ ^v?[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              # 移除可能的前缀'v'
+              RELEASE_VERSION="${RELEASE_TAG#v}"
+              echo "Using release tag version: $RELEASE_VERSION"
+              NEXT_VERSION="$RELEASE_VERSION"
+            else
+              # 自动增加补丁版本号
+              NEXT_VERSION=$(node -e "console.log(require('semver').inc('$BASE_VERSION', 'patch'))")
+              echo "Incrementing to: $NEXT_VERSION (patch)"
+            fi
+          elif [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            # 根据用户输入增加版本号
+            INCREMENT_TYPE="${{ github.event.inputs.version_increment }}"
+            NEXT_VERSION=$(node -e "console.log(require('semver').inc('$BASE_VERSION', '$INCREMENT_TYPE'))")
+            echo "Incrementing to: $NEXT_VERSION ($INCREMENT_TYPE)"
+          else
+            # push触发 - 使用预发布版本
+            # 先增加预发布基础版本号
+            PRE_VERSION=$(node -e "console.log(require('semver').inc('$BASE_VERSION', 'prerelease', 'beta'))")
+            
+            # 添加时间戳和提交哈希
+            TIMESTAMP=$(date +%Y%m%d%H%M%S)
+            COMMIT_HASH=$(git rev-parse --short HEAD)
+            NEXT_VERSION="${PRE_VERSION}.${TIMESTAMP}.${COMMIT_HASH}"
+            echo "Creating pre-release version: $NEXT_VERSION"
+          fi
+          
+          # 输出到后续步骤
+          echo "NEXT_VERSION=${NEXT_VERSION}" >> $GITHUB_ENV
+          echo "version=$NEXT_VERSION" >> $GITHUB_OUTPUT
       
       - name: Create package.json for npm
         run: |
           cd pkg
           
-          # 从当前package.json获取版本，如果存在
-          VERSION=$(node -p "try { require('./package.json').version } catch { '0.1.0' }")
+          # 使用确定的版本号
+          VERSION="${{ env.NEXT_VERSION }}"
+          echo "Using version: $VERSION"
           
-          # 如果是通过push触发，增加预发布版本号
-          if [[ "${{ github.event_name }}" == "push" ]]; then
-            # 生成基于时间戳和提交哈希的预发布版本
-            TIMESTAMP=$(date +%Y%m%d%H%M%S)
-            COMMIT_HASH=$(git rev-parse --short HEAD)
-            VERSION="${VERSION}-pre.${TIMESTAMP}.${COMMIT_HASH}"
+          # 读取原始package.json的内容
+          ORIGINAL_PACKAGE=$(cat package.json)
+          
+          # 使用jq工具更新必要的字段，保留原始内容
+          # 先安装jq
+          sudo apt-get update && sudo apt-get install -y jq
+          
+          # 更新package.json
+          cat package.json | jq \
+            --arg version "$VERSION" \
+            --arg desc "WebAssembly package for subconverter-rs" \
+            --arg repo "https://github.com/lonelam/subconverter-rs" \
+            --arg homepage "https://github.com/lonelam/subconverter-rs#readme" \
+            --arg author "lonelam" \
+          '.version = $version | 
+           .description = $desc | 
+           .author = $author |
+           .license = "MIT" | 
+           .repository = {"type": "git", "url": $repo} |
+           .homepage = $homepage |
+           .keywords = ["wasm", "webassembly", "subconverter", "proxy"] |
+           .publishConfig = {"access": "public"} |
+           .name = "subconverter-wasm"' > package.json.new
+          
+          # 检查结果，避免出错
+          if [ -s package.json.new ]; then
+            mv package.json.new package.json
+            echo "Updated package.json:"
+            cat package.json
+          else
+            echo "Error: Failed to update package.json"
+            exit 1
           fi
-          
-          # 创建或更新package.json
-          cat > package.json << EOF
-          {
-            "name": "subconverter-wasm",
-            "version": "${VERSION}",
-            "description": "WebAssembly package for subconverter-rs",
-            "main": "subconverter.js",
-            "module": "subconverter.js",
-            "types": "subconverter.d.ts",
-            "files": [
-              "subconverter_bg.wasm",
-              "subconverter.js",
-              "subconverter.d.ts",
-              "subconverter_bg.js"
-            ],
-            "sideEffects": [
-              "./subconverter.js",
-              "./subconverter_bg.js"
-            ],
-            "keywords": [
-              "wasm",
-              "webassembly",
-              "subconverter",
-              "proxy"
-            ],
-            "author": "laizn",
-            "license": "MIT",
-            "repository": {
-              "type": "git",
-              "url": "https://github.com/laizn/subconverter-rs"
-            },
-            "homepage": "https://github.com/laizn/subconverter-rs#readme",
-            "publishConfig": {
-              "access": "public"
-            }
-          }
-          EOF
       
       - name: Create README.md for npm package
         run: |
@@ -105,7 +159,7 @@ jobs:
           cat > README.md << EOF
           # subconverter-wasm
 
-          WebAssembly build of [subconverter-rs](https://github.com/laizn/subconverter-rs) for web browsers and Node.js.
+          WebAssembly build of [subconverter-rs](https://github.com/lonelam/subconverter-rs) for web browsers and Node.js.
 
           ## Installation
 
@@ -148,25 +202,39 @@ jobs:
           cd pkg
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
           
-          # 如果是Release触发，则发布正式版本
-          if [[ "${{ github.event_name }}" == "release" ]]; then
+          # 如果是Release触发或手动触发，则发布正式版本
+          if [[ "${{ github.event_name }}" == "release" || "${{ github.event_name }}" == "workflow_dispatch" ]]; then
             npm publish
+            echo "📦 Published version ${{ env.NEXT_VERSION }} to npm"
           else
             # 从push触发的是预发布版本，使用beta标签
             npm publish --tag beta
+            echo "📦 Published beta version ${{ env.NEXT_VERSION }} to npm"
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: Create git tag for version
+        if: success() && (github.event_name == 'release' || github.event_name == 'workflow_dispatch')
+        run: |
+          # 只为正式版本创建git标签
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          VERSION="${{ env.NEXT_VERSION }}"
+          
+          # 创建标签并推送
+          git tag -a "v${VERSION}" -m "Release v${VERSION}"
+          git push origin "v${VERSION}"
+          
+          echo "🏷️ Created and pushed tag v${VERSION}"
+
       - name: Notify on Success
         if: success()
         run: |
-          echo "✅ subconverter-wasm has been successfully published to npm!"
+          echo "✅ subconverter-wasm v${{ env.NEXT_VERSION }} has been successfully published to npm!"
           
-          if [[ "${{ github.event_name }}" == "release" ]]; then
-            VERSION=$(node -p "require('./pkg/package.json').version")
-            echo "Published version: ${VERSION}"
+          if [[ "${{ github.event_name }}" == "release" || "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "Published stable version: ${{ env.NEXT_VERSION }}"
           else
-            VERSION=$(node -p "require('./pkg/package.json').version")
-            echo "Published beta version: ${VERSION}"
+            echo "Published beta version: ${{ env.NEXT_VERSION }}"
           fi 
