--- a/.github/workflows/publish-wasm.yml
+++ b/.github/workflows/publish-wasm.yml
@@ -17,7 +17,7 @@ on:
   push:
     branches: [main, master]
     paths:
-      - 'wasm/**'     # 当wasm目录有变更时触发
+      - 'src/**'     # 当wasm目录有变更时触发
       - '.github/workflows/publish-wasm.yml'
 
 jobs:
