--- a/vercel/package.json
+++ b/vercel/package.json
@@ -26,6 +26,7 @@
     "@types/webpack": "^5.28.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "next-rspack": "^15.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
