--- a/www/netlify.toml
+++ b/www/netlify.toml
@@ -1,7 +1,10 @@
 [build]
 base = "www"
-command = "yarn build"
+command = "pnpm build"
 publish = ".next"
 
 [[plugins]]
 package = "@netlify/plugin-nextjs"
+
+[build.environment]
+NODE_ENV = "production"
