--- a/www/package.json
+++ b/www/package.json
@@ -2,7 +2,6 @@
   "name": "subconverter-next",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.8.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,28 +11,35 @@
   },
   "dependencies": {
     "@netlify/blobs": "^8.1.2",
-    "@netlify/functions": "^2.4.1",
+    "@netlify/functions": "^3.0.4",
     "@vercel/kv": "^3.0.0",
+    "autoprefixer": "^10.4.21",
     "next": "15.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "subconverter-wasm": "0.1.0-beta.1"
+    "postcss": "^8.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "subconverter-wasm": "0.1.0-beta.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.1",
     "@netlify/plugin-nextjs": "^5.10.5",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
     "@types/webpack": "^5.28.5",
-    "eslint": "^9",
+    "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4",
-    "typescript": "^5",
+    "tailwindcss": "^4.1.3",
+    "typescript": "^5.8.3",
     "url": "^0.11.4"
   },
   "engines": {
     "node": ">=20.0.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
