--- a/www/package.json
+++ b/www/package.json
@@ -18,7 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "subconverter-wasm": "0.1.0-beta.6"
+    "subconverter-wasm": "0.1.0-pre.20250413.c0fdcea"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -40,6 +40,9 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "sharp"
-    ]
+    ],
+    "overrides": {
+      "subconverter-wasm": "link:../pkg"
+    }
   }
 }
