--- a/www/package.json
+++ b/www/package.json
@@ -18,7 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "subconverter-wasm": "0.1.0-pre.20250413.c0fdcea"
+    "subconverter-wasm": "0.1.0-pre.20250413.c0fdcea-pre.20250414.9684eb9-pre.20250414.9684eb9-pre.20250414.9684eb9-pre.20250414.9684eb9-pre.20250414.9684eb9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
