--- a/www/vercel.json
+++ b/www/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "buildCommand": "pnpm build",
-    "installCommand": "pnpm install",
+    "buildCommand": "yarn build",
+    "installCommand": "yarn install",
     "framework": "nextjs"
 }
