--- a/www/package.json
+++ b/www/package.json
@@ -10,6 +10,7 @@
     "deploy:netlify": "netlify deploy --build"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@netlify/blobs": "^8.1.2",
     "@netlify/functions": "^3.0.4",
     "@vercel/kv": "^3.0.0",
@@ -18,7 +19,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "subconverter-wasm": "0.1.0-pre.20250414.9684eb9"
+    "subconverter-wasm": "0.1.0-pre.20250414.68268cd"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
