--- a/www/package.json
+++ b/www/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "rebuild:wasm:dev": "cd .. && ./build-wasm.sh && cd www && yarn dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
