Update Netlify build command to enforce dependency installation
- Changed the build command in `www/netlify.toml` to use `yarn install --force` before building, ensuring all dependencies are installed and up-to-date.
- This modification aims to enhance the reliability of the build process and maintain consistency in dependency management.

--- a/www/netlify.toml
+++ b/www/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 base = "www"
-command = "yarn && yarn build"
+command = "yarn install --force && yarn build"
 publish = ".next"
 
 [[plugins]]
