Update Netlify build command to disable production mode
- Modified the build command in `www/netlify.toml` to use `yarn install --production=false`, allowing for the installation of all dependencies during the build process.
- This change aims to enhance the build reliability by ensuring that development dependencies are available, improving the overall consistency of the build environment.

--- a/www/netlify.toml
+++ b/www/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 base = "www"
-command = "yarn install --force && yarn build"
+command = "yarn install --production=false && yarn build"
 publish = ".next"
 
 [[plugins]]
