--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     "@netlify/functions": "^3.0.4",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
+    "monaco-editor": "^0.52.2",
     "next": "15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
