Enhance WASM build script and remove outdated workflows
- Added detailed usage instructions and options to the `build-wasm.sh` script, improving user guidance for building and releasing the WASM package.
- Implemented logic to bump the minor version and prepare for releases, streamlining the version management process.
- Removed the outdated `publish-wasm.yml` and `update-vercel.yml` workflows, simplifying the CI/CD setup.
- Updated the `release.yml` workflow to refine version tag patterns for better release management.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: [ main, dev ]
     tags:
-      - 'v*'
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-pre.*'
+      - 'v[0-9]+.[0-9]+.[0-9]+-rc.*'
   workflow_dispatch:
 
 concurrency: 
