Update release workflow and enhance application settings management
- Added a new `repository_dispatch` event to the release workflow to trigger actions upon completion of WASM releases.
- Introduced new API client functions for managing server settings, including fetching, updating, exporting, and importing settings.
- Enhanced the front-end to display server settings and application download options, improving user experience and accessibility.
- Updated the `Cargo.lock` version to 0.2.1, reflecting the latest changes and ensuring consistency across the project.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+-pre.*'
       - 'v[0-9]+.[0-9]+.[0-9]+-rc.*'
   workflow_dispatch:
+  repository_dispatch:
+    types: [wasm-release-completed]
 
 concurrency: 
   group: ${{ github.ref }}-${{ github.workflow }}
