--- a/.cursorignore
+++ b/.cursorignore
@@ -1,5 +1,4 @@
 # Add directories or file patterns to ignore during indexing (e.g. foo/ or *.csv)
 subconverter/base
-base
-base/**
+base/rules
 node_modules
