--- a/www/package.json
+++ b/www/package.json
@@ -14,8 +14,10 @@
     "@monaco-editor/react": "^4.7.0",
     "@netlify/blobs": "^8.1.2",
     "@netlify/functions": "^3.0.4",
+    "@types/js-yaml": "^4.0.9",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.21",
+    "js-yaml": "^4.1.0",
     "monaco-editor": "^0.52.2",
     "next": "15.3.0",
     "postcss": "^8.5.3",
@@ -33,6 +35,7 @@
     "@types/webpack": "^5.28.5",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
+    "next-rspack": "^15.3.0",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
     "url": "^0.11.4"
