Update project configuration to use pnpm as package manager
- Replaced instances of yarn with pnpm in various configuration files, including package.json, netlify.toml, and build-wasm.sh, to standardize package management across the project.
- Removed yarn.lock files to eliminate redundancy and ensure consistency with pnpm.
- Updated the .cursorrules file to reflect the change in package manager from yarn to pnpm, enhancing clarity for future contributors.

--- a/www/netlify.toml
+++ b/www/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 base = "www"
-command = "yarn install --production=false && yarn build"
+command = "pnpm install --production=false && pnpm build"
 publish = ".next"
 
 [[plugins]]
