Implement internationalization support with next-intl
- Added new cursor rules for internationalization (i18n) to standardize the use of next-intl for translations in client and server components.
- Updated layout and page components to initialize translations and wrap children with NextIntlClientProvider for proper context.
- Replaced static text in various components with translation keys to enhance localization support.
- Integrated LanguageSwitcher component in headers for improved language selection.
- Updated project configuration to include next-intl as a dependency in package.json and pnpm-lock.yaml.

--- a/www/package.json
+++ b/www/package.json
@@ -20,6 +20,7 @@
     "js-yaml": "^4.1.0",
     "monaco-editor": "^0.52.2",
     "next": "15.3.0",
+    "next-intl": "^4.0.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
