Update wasm-release workflow to enhance dependency management and release process
- Added a requirement for a personal access token with 'workflow' scope permissions for the release workflow.
- Updated the commit and push steps for package.json changes to use the EndBug/add-and-commit action for better handling.
- Replaced manual git tagging with the mathieudutour/github-tag-action for streamlined version tagging.
- Introduced a trigger for the release workflow upon completion of the WASM release.

--- a/.github/workflows/wasm-release.yml
+++ b/.github/workflows/wasm-release.yml
@@ -1,5 +1,8 @@
 name: WASM Release
 
+# This workflow requires a personal access token with workflows permission
+# Please create a PAT with 'workflow' scope permissions and add it as a secret named PAT_TOKEN
+
 on:
   push:
     tags:
@@ -18,6 +21,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -112,15 +116,19 @@ jobs:
             jq ".dependencies[\"subconverter-wasm\"] = \"$VERSION\"" package.json > tmp.json && mv tmp.json package.json
             npm install -g pnpm
             pnpm install --no-frozen-lockfile
-            git config --global user.name "GitHub Actions"
-            git config --global user.email "actions@github.com"
-            git add package.json
-            git add pnpm-lock.yaml
-            git commit -m "Update subconverter-wasm dependency to $VERSION"
             cd ..
           else
             echo "www/package.json not found, skipping update"
           fi
+
+      - name: Commit and push package.json changes
+        if: hashFiles('www/package.json') != ''
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: 'www/package.json www/pnpm-lock.yaml'
+          message: "Update subconverter-wasm dependency to ${{ steps.set-version.outputs.version }}"
+          default_author: github_actions
+          push: true
 
       - name: Publish to crates.io
         run: |
@@ -130,11 +138,15 @@ jobs:
         continue-on-error: true
 
       - name: Create release tag
-        run: |
-          VERSION="${{ steps.set-version.outputs.version }}"
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git tag -a "v$VERSION" -m "Release version $VERSION"
-          git push origin HEAD:main
-          git push origin --tags
-          echo "Release tag v$VERSION created. This will trigger the binary build workflow."
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: v${{ steps.set-version.outputs.version }}
+          tag_message: "Release version ${{ steps.set-version.outputs.version }}"
+
+      - name: Trigger release workflow
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          event-type: wasm-release-completed
+          client-payload: '{"version": "${{ steps.set-version.outputs.version }}"}'
